--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 16
-        versionName "1.0"
+        versionCode 21
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
@@ -49,7 +49,7 @@ android {
         abi {
             enable true
             reset()
-            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a', 'armeabi', 'mips' //select ABIs to build APKs for
+            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a', 'armeabi'//select ABIs to build APKs for
             universalApk false //generate an additional APK that contains all the ABIs
         }
     }
@@ -60,7 +60,8 @@ android {
         // assign different version code for each output
         variant.outputs.each { output ->
             output.versionCodeOverride =
-                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) * 1000000 + android.defaultConfig.versionCode
+                    android.defaultConfig.versionCode * 10000000 +
+                            project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0)
         }
     }
 }
@@ -83,7 +84,7 @@ dependencies {
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
     compile "com.jakewharton:butterknife:8.6.0"
     kapt "com.jakewharton:butterknife-compiler:8.6.0"
-    compile ('com.github.codekidX:storage-chooser:2.0.1') {
+    compile ('com.github.codekidX:storage-chooser:2.0.2') {
         exclude group: 'com.android.support'
     }
     compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.3@aar') {
