--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 24
+        versionCode 25
         versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -68,27 +68,27 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile("com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version") {
         // if you don't use android.app.Fragment you can exclude support for them
         exclude module: "support-v13"
     }
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    testCompile 'junit:junit:4.12'
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:design:$support_version"
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
-    compile "com.jakewharton:butterknife:8.6.0"
-    kapt "com.jakewharton:butterknife-compiler:8.6.0"
+    compile "com.jakewharton:butterknife:8.8.1"
+    kapt "com.jakewharton:butterknife-compiler:8.8.1"
     compile ('com.github.codekidX:storage-chooser:2.0.2') {
         exclude group: 'com.android.support'
     }
     compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.3@aar') {
         transitive = true
+        exclude group: 'com.android.support'
     }
 //    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.1.3@aar'
 //    compile 'com.esri.geometry:esri-geometry-api:1.2.1'
@@ -96,11 +96,13 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 }
 repositories {
     jcenter()
     mavenCentral()
     maven { url "https://jitpack.io" }
+    maven { url 'https://maven.google.com' }
 }
