--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.4-3'
     ext.permission_dispatcher_version = '2.4.0'
+    ext.support_version = '26.0.2'
     repositories {
         jcenter()
     }
@@ -15,6 +16,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.github.ben-manes.versions' version '0.15.0'
+}
+
 allprojects {
     repositories {
         jcenter()
@@ -24,3 +29,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
