--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
@@ -91,16 +91,21 @@ dependencies {
         transitive = true
         exclude group: 'com.android.support'
     }
-//    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.3@aar'
+    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.3@aar'
+    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.3'
+//    compile 'com.mapbox.mapboxsdk:mapbox-android-directions:1.0.0@aar'
 //    compile 'com.esri.geometry:esri-geometry-api:1.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     compile 'com.jaredrummler:colorpicker:1.0.1'
+    compile 'com.github.clans:fab:1.6.4'
+    compile "org.jetbrains.anko:anko-commons:0.10.1"
+    compile 'com.patloew.rxlocation:rxlocation:1.0.3'
 }
 repositories {
     jcenter()
