--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
-    ext.permission_dispatcher_version = '2.4.0'
-    ext.support_version = '26.0.2'
+    ext.kotlin_version = '1.1.50'
+    ext.support_version = '26.1.0'
+    ext.permission_dispatcher_version = '3.0.1'
+    ext.retrofit_version = '2.3.0'
     repositories {
         jcenter()
     }
