--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,21 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'org.jetbrains.kotlin.android.extensions'
+
+androidExtensions {
+    experimental = true
+}
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 29
-        versionName "1.3"
+        versionCode 38
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -74,6 +79,7 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+//    compile "org.jetbrains.kotlin:kotlin-android-extensions-runtime:$kotlin_version"
     compile("com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version") {
         // if you don't use android.app.Fragment you can exclude support for them
         exclude module: "support-v13"
@@ -91,15 +97,15 @@ dependencies {
         transitive = true
         exclude group: 'com.android.support'
     }
-    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.3@aar'
-    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.3'
+    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.5@aar'
+    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.5'
 //    compile 'com.mapbox.mapboxsdk:mapbox-android-directions:1.0.0@aar'
 //    compile 'com.esri.geometry:esri-geometry-api:1.2.1'
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     compile 'com.jaredrummler:colorpicker:1.0.1'
