--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 38
-        versionName "1.5"
+        versionCode 41
+        versionName "1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -23,7 +23,7 @@ android {
         debug {}
         release {
             if (project.hasProperty("keys.repo")) {
-                def projectPropsFile = file(project.property("keys.repo") + "/vv.properties")
+                def projectPropsFile = file(project.property("keys.repo") + "vv.properties")
                 if (projectPropsFile.exists()) {
                     Properties props = new Properties()
                     props.load(new FileInputStream(projectPropsFile))
@@ -93,25 +93,28 @@ dependencies {
     compile ('com.github.codekidX:storage-chooser:2.0.2') {
         exclude group: 'com.android.support'
     }
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.3@aar') {
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.4@aar') {
         transitive = true
         exclude group: 'com.android.support'
+        exclude module: 'play-services-location'
     }
-    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.5@aar'
-    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.5'
+    compile "com.google.android.gms:play-services-location:$firebase_version"
+//    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.7@aar'
+//    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.7'
 //    compile 'com.mapbox.mapboxsdk:mapbox-android-directions:1.0.0@aar'
 //    compile 'com.esri.geometry:esri-geometry-api:1.2.1'
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
     compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     compile 'com.jaredrummler:colorpicker:1.0.1'
     compile 'com.github.clans:fab:1.6.4'
-    compile "org.jetbrains.anko:anko-commons:0.10.1"
+    compile "org.jetbrains.anko:anko-commons:0.10.2"
     compile 'com.patloew.rxlocation:rxlocation:1.0.3'
+    compile "com.google.firebase:firebase-core:$firebase_version"
 }
 repositories {
     jcenter()
@@ -119,3 +122,5 @@ repositories {
     maven { url "https://jitpack.io" }
     maven { url 'https://maven.google.com' }
 }
+
+apply plugin: 'com.google.gms.google-services'
