--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,18 @@
 buildscript {
     ext.kotlin_version = '1.1.51'
     ext.support_version = '26.1.0'
+    ext.firebase_version = '11.4.2'
     ext.permission_dispatcher_version = '3.0.1'
     ext.retrofit_version = '2.3.0'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.firebase:firebase-plugins:1.1.1'
+        classpath 'com.google.gms:google-services:3.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,12 +22,13 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.ben-manes.versions' version '0.15.0'
+    id 'com.github.ben-manes.versions' version '0.17.0'
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
