--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ androidExtensions {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "ru.anisart.vv"
         minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 41
-        versionName "1.6"
+        targetSdkVersion 27
+        versionCode 44
+        versionName "1.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -70,51 +70,56 @@ android {
                             project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0)
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-//    compile "org.jetbrains.kotlin:kotlin-android-extensions-runtime:$kotlin_version"
-    compile("com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version") {
+    }
+    testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //    compile "org.jetbrains.kotlin:kotlin-android-extensions-runtime:$kotlin_version"
+    implementation "com.github.hotchemi:permissionsdispatcher:$permission_dispatcher_version", {
         // if you don't use android.app.Fragment you can exclude support for them
         exclude module: "support-v13"
     }
     kapt "com.github.hotchemi:permissionsdispatcher-processor:$permission_dispatcher_version"
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:design:$support_version"
-    compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
-    compile "com.jakewharton:butterknife:8.8.1"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     kapt "com.jakewharton:butterknife-compiler:8.8.1"
-    compile ('com.github.codekidX:storage-chooser:2.0.2') {
+    implementation 'com.github.codekidX:storage-chooser:2.0.3', {
         exclude group: 'com.android.support'
     }
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.4@aar') {
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.2.1@aar', {
         transitive = true
         exclude group: 'com.android.support'
         exclude module: 'play-services-location'
     }
-    compile "com.google.android.gms:play-services-location:$firebase_version"
-//    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.7@aar'
-//    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.7'
-//    compile 'com.mapbox.mapboxsdk:mapbox-android-directions:1.0.0@aar'
-//    compile 'com.esri.geometry:esri-geometry-api:1.2.1'
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
-    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
-    compile 'com.jaredrummler:colorpicker:1.0.1'
-    compile 'com.github.clans:fab:1.6.4'
-    compile "org.jetbrains.anko:anko-commons:0.10.2"
-    compile 'com.patloew.rxlocation:rxlocation:1.0.3'
-    compile "com.google.firebase:firebase-core:$firebase_version"
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.3'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    //    compile 'com.mapbox.mapboxsdk:mapbox-android-services:2.2.7@aar'
+    //    compile 'com.mapbox.mapboxsdk:mapbox-java-services-rx:2.2.7'
+    //    compile 'com.mapbox.mapboxsdk:mapbox-android-directions:1.0.0@aar'
+    //    compile 'com.esri.geometry:esri-geometry-api:1.2.1'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.jaredrummler:colorpicker:1.0.2'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'org.jetbrains.anko:anko-commons:0.10.5'
+    implementation 'com.patloew.rxlocation:rxlocation:1.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
 }
 repositories {
     jcenter()
