--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ org.gradle.jvmargs=-Xmx1536m
 org.gradle.parallel=true
 
 keys.repo=../../
+
+android.useAndroidX=true
+android.enableJetifier=true
