--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,18 @@
 language: android
+android:
+  components:
+  # Uncomment the lines below if you want to
+  # use the latest revision of Android SDK Tools
+   - tools
+   - platform-tools
 
-jdk:
-  - oraclejdk8
+  # The BuildTools version used by your project
+  - build-tools-27.0.3
 
-before_install:
-  # Install SDK license so Android Gradle plugin can install deps.
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-  # Install the rest of tools (e.g., avdmanager).
-  - sdkmanager tools
-  # Install the system image.
-  - sdkmanager "system-images;android-19;default;armeabi-v7a"
-  # Create and start emulator for the script. Meant to race the install task.
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-19;default;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
+  # The SDK version used to compile your project
+  - android-27
 
-install: ./gradlew clean assemble --stacktrace
-
-before_script:
-  - android-wait-for-emulator
-  - adb shell settings put global window_animation_scale 0 &
-  - adb shell settings put global transition_animation_scale 0 &
-  - adb shell settings put global animator_duration_scale 0 &
-  - adb shell input keyevent 82 &
-
-script: ./gradlew check connectedCheck --stacktrace
-
-env:
-  global:
-    - ADB_INSTALL_TIMEOUT=8
-
-notifications:
-  email: false
-
-sudo: false
-
-cache:
-  directories:
-    - $HOME/.gradle
+  # Additional components
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
