--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,29 @@
 language: android
+jdk: oraclejdk8
+env:
+  global:
+  - ANDROID_API_LEVEL=27
+  - ANDROID_BUILD_TOOLS_VERSION=27.0.3
 android:
+  licenses:
+  - 'android-sdk-preview-license-.+'
+  - 'android-sdk-license-.+'
+  - 'google-gdk-license-.+'
   components:
-  # Uncomment the lines below if you want to
-  # use the latest revision of Android SDK Tools
-   - tools
-   - platform-tools
-
+  - tools
+  - platform-tools
   # The BuildTools version used by your project
-  - build-tools-27.0.3
-
+  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
   # The SDK version used to compile your project
-  - android-27
-
+  - android-$ANDROID_API_LEVEL
   # Additional components
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
+  - addon-google_apis-google-$ANDROID_API_LEVEL
+before_script:
+# Prepare pre-accepted licenses to not be promted at installation
+- mkdir -p "$ANDROID_HOME/licenses"
+- cp ./google-licenses/* "$ANDROID_HOME/licenses/"
+script:
+- ./gradlew build check
