--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,7 @@ android:
   - extra-google-m2repository
   - extra-android-m2repository
   - addon-google_apis-google-$ANDROID_API_LEVEL
+before_install:
+- chmod +x gradlew
 script:
 - ./gradlew build check
