--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
   global:
   - ANDROID_API_LEVEL=27
   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+  - EMULATOR_API_LEVEL=19
 android:
   licenses:
   - 'android-sdk-preview-license-.+'
@@ -21,7 +22,13 @@ android:
   - extra-google-m2repository
   - extra-android-m2repository
   - addon-google_apis-google-$ANDROID_API_LEVEL
+  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
 before_install:
 - chmod +x gradlew
+before_script:
+- echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
 script:
-- ./gradlew assembleDebug testDebugUnitTest
+- ./gradlew installDebug testDebugUnitTest
