--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ env:
   global:
   - ANDROID_API_LEVEL=27
   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
-  - EMULATOR_API_LEVEL=19
 android:
   licenses:
   - 'android-sdk-preview-license-.+'
@@ -22,11 +21,12 @@ android:
   - extra-google-m2repository
   - extra-android-m2repository
   - addon-google_apis-google-$ANDROID_API_LEVEL
-  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
+  - android-19
+  - sys-img-armeabi-v7a-android-19
 before_install:
 - chmod +x gradlew
 before_script:
-- echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
+- echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 &
