travis run matrix of emulators tests #2

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ android:
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
+  - android-19
   - sys-img-armeabi-v7a-android-19
+  - android-21
   - sys-img-armeabi-v7a-android-21
 before_cache:
 - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
