travis run matrix of emulators install only

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,4 @@ script:
 - android-wait-for-emulator
 - adb devices
 - adb shell input keyevent 82 &
-- ./gradlew testDebugUnitTest connectedDebugAndroidTest
+- ./gradlew testDebugUnitTest installDebug
